# ragclassifier

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLASSIFICATION_RUNS.md  ClassifyingRules.docx  PROJECT.md  README.md  SPEC.md  app.py  pyproject.toml  report_generator.py  risk_evaluator.py  test_risk_evaluator.py
ragclassifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reports/: report_2026-03-05.xlsx  report_2026-03-10.xlsx  report_2026-03-17.xlsx
scripts/: __init__.py  dummy_test_cli.py
src/: __init__.py  agents.py  classifier.py  config.py  document_loader.py  excel_logger.py  models.py  report_generator.py  rubric.py  test_risk_evaluator.py
tests/: test_classifier.py  test_document_loader.py  test_risk_evaluator.py
